fix alignment

--- a/src/pages/founders-club.scss
+++ b/src/pages/founders-club.scss
@@ -7,7 +7,7 @@
   margin: auto;
   display: flex;
   flex-direction: row;
-  align-items: end;
+  align-items: start;
   justify-content: center;
   margin-top: 140px;
   position: relative;
